--- a/github.html
+++ b/github.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>programming gain</h1><br>
-    <p>It's my first program for my new pc . I will try for my best to tuch a hight rate</p>
+    <p>You are try you are success</p>
 </body>
 </html>
